    - Query statistics from BSD's packet filter: pf (FreeBSD only)
  * debian/control, debian/rules:
    - Build-depend on kfreebsd-kernel-headers (kfreebsd-any only) and disable
      the 'pf' plugin on non-kfreebsd systems.
  * debian/patches:
    - Removed migrate-4-5-df.dpatch; merged upstream.
    - Removed rtnl_dump_filter.dpatch; merged upstream.

 -- Sebastian Harl <tokkee@debian.org>  Tue, 20 Nov 2012 11:35:22 +0100

collectd (5.1.0-3) unstable; urgency=low

  * debian/patches/migrate-4-5-df.dpatch, debian/collectd-core.postinst:
    - Added patch to fix the migration of 'df' values in migrate-4-5.px;
      thanks to 'markuskaindl' for reporting this on IRC.
    - Pass --rrdfilter and --rrdtool parameters to migrate-4-5.px in order to
      let the script find those binaries/scripts.
    (Closes: #681363)
  * debian/collectd-core.collectd.init.d:
    - Catch disabled state in start and restart and don't exit with an error
      status. Amongst others, this fixes an upgrade of collectd when the
      daemon is disabled. Thanks to Florian Ernst for reporting this and
      Evgeni Golov for providing (an early) patch (Closes: #681216).
    - Don't use 'set -e' and 'exit 0' (at the end) in order to let return
      statuses propagate correctly. (cf. #681216)

 -- Sebastian Harl <tokkee@debian.org>  Sun, 15 Jul 2012 11:17:10 +0200

collectd (5.1.0-2) unstable; urgency=low

  * debian/collectd-core.postinst:
    - Don't create unused temp. directory.
  * debian/control, debian/rules:
    - Build depend on libmodbus-dev and enabled modbus plugin. 5.1 now
      supports libmodbus 3; thanks to Ivo De Decker for reporting this
      (Closes: #639796).
  * debian/po:
    - Updated Swedish debconf translation; thanks to Martin Bagge
      (Closes: #677842).
    - Added Slovak debconf translation; thanks to 'helix84'
      (Closes: #677902).
    - Updated Danish debconf translation; thanks to Joe Dalton
      (Closes: #677908).