@@ -10,6 +10,10 @@ collectd (5.2.0-1) UNRELEASED; urgency=low
   * debian/patches:
     - Removed migrate-4-5-df.dpatch; merged upstream.
     - Removed rtnl_dump_filter.dpatch; merged upstream.
+  * debian/rules:
+    - Fix installation paths used for Perl bindings. Upstream now passes
+      INSTALL_BASE rather than PREFIX to Makefile.PL which resulted in the
+      bindings being installed to different locations than before.
 
  -- Sebastian Harl <tokkee@debian.org>  Tue, 20 Nov 2012 11:35:22 +0100
 
